--- a/AskIT/src/main/webapp/assets/css/header.css
+++ b/AskIT/src/main/webapp/assets/css/header.css
@@ -4,37 +4,39 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+    text-decoration: none;
+ color: #333;
+  list-style:none;
 }
 
-body {
+/* body {
   background-color: #f9f9f9;
   display: flex;
   flex-direction: column;
   height: 100vh;
   margin: 0;
-}
+} */
 
-a {
+/* a {
   text-decoration: none;
   color: inherit;
-}
+} */
 
-ul {
+/* ul {
   list-style: none;
   margin: 0;
   padding: 0;
-}
+} */
 
-img {
+/* img {
   max-width: 100%;
   height: auto;
-}
+} */
 
-section {
+/* section {
   display: block;
   unicode-bidi: isolate;
-}
+} */
 
 /* 헤더 스타일 */
 .header-box {
