--- a/AskIT/src/main/webapp/assets/css/main.css
+++ b/AskIT/src/main/webapp/assets/css/main.css
@@ -4,7 +4,10 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  color:#333;
+  /* box-sizing: border-box; */
 }
 
 body {
@@ -12,29 +15,29 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  margin: 0;
+  /* margin: 0; */
 }
 
-a {
+/* a {
   text-decoration: none;
   color: inherit;
-}
+} */
 
-ul {
+/* ul {
   list-style: none;
   margin: 0;
   padding: 0;
-}
+} */
 
-img {
+/* img {
   max-width: 100%;
   height: auto;
-}
+} */
 
-section {
+/* section {
   display: block;
   unicode-bidi: isolate;
-}
+} */
 
 /* 헤더 스타일 */
 .header-box {
@@ -214,13 +217,13 @@ section {
 
 .main-banner{
   position: relative;
-  z-index: 1000;
+  /* z-index: 1000; */
   margin-top: 20px;
 }
 
 .main-outer {
   width: 100%;
-  max-width: 1000px;
+  max-width: 1200px;
   height: 100%;
   max-height: 350px;
   margin: 40px auto 0;
@@ -304,9 +307,10 @@ main{
 .main-container {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  padding: 20px;
+  /* gap: 20px; */
+  /* padding: 20px; */
   margin-top: 50px; /* 헤더 높이만큼 여백 추가 */
+  width:1200px;
 }
 
 /* ??????? */
@@ -357,6 +361,10 @@ main{
   padding: 10px;
   border-radius: 5px;
   background-color: #fff;
+}
+/* 명예의전당 이미지 잠시 꺼둠 */
+.ranking-card img{
+	display:none;
 }
 
 .ranking-card .ranking {
@@ -499,7 +507,106 @@ main{
 } */
 
 /* 이달의 글  */
-.main-best{
+
+/* 이달의 베스트질문 */
+.keh-main-bestQ h3{
+	font-size:32px;
+}
+.keh-main-bestQ a{
+	/* border:1px solid #D96073; */
+	border-radius:10px;
+	width:316px;
+	height:316px;
+	padding:20px;
+	margin-top:20px;
+	display:block;
+	background-color:#ebebeb;
+}
+.keh-main-bestQ a:hover{
+	opacity:60%;
+}
+.keh-main-bestQ div{
+	width:100%;
+	height:100px;
+	margin-top:20px;
+	border-radius:10px;
+	overflow:hidden;
+}
+.keh-main-bestQ div img{
+	width:100%;
+	margin-top:-10px;	
+}
+.keh-main-bestQ span{
+	background-color:#D96073;
+	border-radius:10px;
+	color:#FFF;
+	padding:5px 20px;
+	font-size:12px;
+}
+.keh-main-bestQ h4{
+	font-size:20px;
+	padding : 10px 0px;
+}
+.keh-main-bestQ p{
+width: 100%;
+    line-height: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 120px;
+}
+
+/* 이달의 베스트꿀팁 */
+.keh-main-bestT h3{
+	font-size:32px;
+}
+.keh-main-bestT a{
+	/* border:1px solid #D96073; */
+	border-radius:10px;
+	width:316px;
+	height:316px;
+	padding:20px;
+	margin-top:20px;
+	display:block;
+	background-color:#ebebeb;
+}
+.keh-main-bestT a:hover{
+	opacity:60%;
+}
+.keh-main-bestT div{
+	width:100%;
+	height:100px;
+	margin-top:20px;
+	border-radius:10px;
+	overflow:hidden;
+}
+.keh-main-bestT div img{
+	width:100%;
+	margin-top:-10px;	
+}
+.keh-main-bestT span{
+	background-color:#D96073;
+	border-radius:10px;
+	color:#FFF;
+	padding:5px 20px;
+	font-size:12px;
+}
+.keh-main-bestT h4{
+		font-size:20px;
+	padding : 10px 0px;
+}
+.keh-main-bestT p{
+width: 100%;
+    line-height: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 120px;
+}
+
+
+
+
+
+/* .main-best{
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -545,8 +652,8 @@ main{
 
 .best-img-text {
   position: absolute;
-  /* top: 90px;
-  left: 20px; */
+  top: 90px;
+  left: 20px;
   z-index: 1;
   color: #ffffff;
   font-size: 9px;
@@ -562,14 +669,14 @@ main{
 .best-img-box {
   color: #fff;
   background-color: #d96073;
-}
+} */
 
 /* 메인 공지사항 */
 
 .main-notice{
   position: relative;
-    width: 100%;
-    max-width: 1100px;
+    width: 1200px;
+/*     max-width: 1100px; */
     height: 100%;
     /* display: flex;
     align-items: center;
@@ -704,6 +811,10 @@ background: none;
 .main-clickbox-button:hover {
   transform: scale(1.1);
   background: #FDECEC;
+}
+
+.main-clickbox-button > a{
+color :  #D96073;
 }
 
 /* .main-interest {
